# ddos-event-collector-rs

./: .gitignore  Cargo.toml  README.md  remote-install.sh
migrations/: 0001_initial.sql
src/: api.rs  broker.rs  config.rs  db.rs  main.rs  models.rs
