[package]
name = "ddos-event-collector"
description = "Webhook Manager (RabbitMQ ⇄ Kafka)"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.17"
once_cell = "1.19"
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
# RabbitMQ
lapin = { version = "4.0.0-rc.1", features = ["rustls"] }

# Kafka
rdkafka = "0.38.0"
api = "0.2.0"
url = "2.5"